@@ -204,6 +204,8 @@ template<>
 inline Type Attribute_<std::string>::staticType() { return Type::STRING; }
 template<>
 inline Type Attribute_<Color>::staticType() { return Type::COLOR; }
+template<>
+inline Type Attribute_<Rectangle>::staticType() { return Type::RECTANGLE; }
 
 template<typename T>
 class DynAttribute_ : public Attribute {
